Fix spacing and formatting for html and css files

--- a/css/auth.css
+++ b/css/auth.css
@@ -1,23 +1,14 @@
-body 
-{
+body {
     margin: 0;
     background-color: gold;
 }
 
-#newbody
-{
-    background:linear-gradient(
-        to top,
-        white 0%,
-        white 75%,
-        gold 75%,
-        gold 100%
-    );
+#newbody {
+    background: linear-gradient(to top, white 0%, white 75%, gold 75%, gold 100%);
 }
 
-#title
-{
-    position: fixed;
+#title {
+    position: absolute;
     font-size: 80px;
     padding-top: 2%;
     width: 100%;
@@ -28,7 +19,7 @@ body
 }
 
 /*Log in Screen design*/
-.loginInputs{
+.loginInputs {
     outline: none;
     border-radius: 5px;
     border-color: #ffffff;
@@ -47,16 +38,16 @@ body
     margin-top: 1%;
     margin-bottom: 0%;
 }
+
 .loginInputs:hover,
 .loginInputs:active,
-.loginInputs:focus{
+.loginInputs:focus {
     outline: none;
     border-bottom-color: #000000;
 }
 
 /* Style of the login button */
-.loginPageButton
-{
+.loginPageButton {
     font-size: 40px;
     border-radius: 5px;
     width: 30%;
@@ -68,27 +59,25 @@ body
     border-width: thick;
     border-color: black;
     background-color: black;
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     font-family: 'Ubuntu', sans-serif;
 }
 
 /* What occurs when you hover over the Log in button */
-.loginPageButton:hover{
+.loginPageButton:hover {
     background-color: #ffffff;
     color: #000000;
     opacity: 100%;
 }
 
 /*style of hyperlink to register page*/
-#registerLink{
+#registerLink {
     text-align: center;
     position: relative;
     top: 15%;
 }
 
-
-#loginDiv
-{
+#loginDiv {
     font-size: 30px;
     position: fixed;
     width: 100%;
@@ -101,14 +90,12 @@ body
     background-color: white;
 }
 
-a{
+a {
     font-size: 30px;
 }
 
-
-
-#authResult{
-    position: fixed;
+#authResult {
+    position: absolute;
     z-index: 2;
     display: inline-block;
     font-size: 0.8em;
@@ -121,7 +108,7 @@ a{
 }
 
 /*Register Screen design*/
-.firstnameInput{
+.firstnameInput {
     outline: none;
     position: absolute;
     height: fit-content;
@@ -139,7 +126,7 @@ a{
     display: block;
 }
 
-.lastnameInput{
+.lastnameInput {
     outline: none;
     position: absolute;
     height: fit-content;
@@ -157,7 +144,7 @@ a{
     display: block;
 }
 
-.registerUsernameInput{
+.registerUsernameInput {
     outline: none;
     position: absolute;
     height: fit-content;
@@ -175,7 +162,8 @@ a{
     margin: auto;
     display: block;
 }
-.registerPasswordInput{
+
+.registerPasswordInput {
     outline: none;
     position: absolute;
     height: fit-content;
@@ -194,7 +182,7 @@ a{
     display: block;
 }
 
-.registerRetypePasswordInput{
+.registerRetypePasswordInput {
     outline: none;
     position: absolute;
     height: fit-content;
@@ -213,8 +201,6 @@ a{
     display: block;
 }
 
-
-
 .firstnameInput:hover,
 .firstnameInput:active,
 .firstnameInput:focus,
@@ -229,14 +215,12 @@ a{
 .registerPasswordInput:focus,
 .registerRetypePasswordInput:hover,
 .registerRetypePasswordInput:active,
-.registerRetypePasswordInput:focus{
+.registerRetypePasswordInput:focus {
     outline: none;
     border-bottom-color: #000000;
 }
 
-
-.registerPageButton
-{
+.registerPageButton {
     font-size: 40px;
     border-radius: 5px;
     width: 30%;
@@ -249,19 +233,18 @@ a{
     border-width: thick;
     border-color: black;
     background-color: black;
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     font-family: 'Ubuntu', sans-serif;
 }
 
 /* What occurs when you hover over the sign up button */
-.registerPageButton:hover{
+.registerPageButton:hover {
     background-color: #ffffff;
     color: #000000;
     opacity: 100%;
 }
 
-#closeButton
-{
+#closeButton {
     height: 70px;
     width: 70px;
     position: absolute;
@@ -275,7 +258,7 @@ a{
     background-color: rgba(255, 255, 255, 0);
 }
 
-#loginLink{
+#loginLink {
     text-align: center;
     position: absolute;
     bottom: 3%;
@@ -283,9 +266,7 @@ a{
     right: 0;
 }
 
-
-#registerDiv
-{
+#registerDiv {
     font-size: 30px;
     position: fixed;
     width: 100%;
