--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,12 @@
-body 
-{
+body {
   font-family: "Lato", sans-serif;
   margin: 0;
   background-color: #d3d3d3;
-
 }
 
-#newBody
-{
+#newBody {
   background-color: gold;
 }
-
 
 .sidenav {
   height: 100%;
@@ -51,9 +47,15 @@ body
   padding: 16px;
 }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+@media screen and (max-height:450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
+  }
+
 }
 
 /* The Modal (background) */
@@ -66,8 +68,8 @@ body
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
@@ -94,11 +96,7 @@ body
   cursor: pointer;
 }
 
-
-
-
-#title
-{
+#title {
   position: fixed;
   font-size: 80px;
   padding-top: 2%;
@@ -113,7 +111,7 @@ body
 }
 
 /*Register Screen design*/
-.searchInput{
+.searchInput {
   outline: none;
   position: fixed;
   height: fit-content;
@@ -131,16 +129,14 @@ body
   display: block;
 }
 
-
-
-.searchInput:hover, .searchInput:active, .searchInput:focus{
+.searchInput:hover,
+.searchInput:active,
+.searchInput:focus {
   outline: none;
   border-bottom-color: #000000;
 }
 
-
-.searchButton
-{
+.searchButton {
   font-size: 40px;
   border-radius: 5px;
   width: 20%;
@@ -152,18 +148,17 @@ body
   border-width: thick;
   border-color: black;
   background-color: black;
-  color:rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
   font-family: 'Ubuntu', sans-serif;
 }
 
-.searchButton:hover{
+.searchButton:hover {
   background-color: #ffffff;
   color: #000000;
   opacity: 100%;
 }
 
-#closeButton
-{
+#closeButton {
   height: 70px;
   width: 70px;
   position: absolute;
@@ -177,7 +172,7 @@ body
   background-color: rgba(255, 255, 255, 0);
 }
 
-#loginLink{
+#loginLink {
   text-align: center;
   position: absolute;
   bottom: 3%;
@@ -185,9 +180,7 @@ body
   right: 0;
 }
 
-
-#contactDiv
-{
+#contactDiv {
   font-size: 30px;
   position: fixed;
   width: 100%;
